# FontDiffusion

./: .gitattributes  .gitignore  README.md  ablation_analysis.py  ablation_generation.py  batch_sample_evaluate.py  create_hf_dataset.py  create_validation_split.py  export_hf_dataset_to_disk.py  filename_utils.py  font_diffusion.ipynb  generate_metadata.py  gradio_app.py  main.py  my_requirements.txt  my_train.py  my_utils.py  pth2safetensores.py  pth2safetensors.py  pyproject.toml  requirements.txt  run_batch_example.sh  sample.py  sample_batch.py  sample_batch_multi_gpus.py  sample_images.py  sample_optimized.py  sample_unicode.py  upload_models.py  utilities.py
configs/: fontdiffuser.py
data_examples/: validation_scenarios.json
dataset/: __init__.py  my_font_dataset.py
font_generations/: batch_config.yaml  font_statistics.json
font_generations/row_0001_𠀖/: character_info.json
font_generations/row_0002_𠀗/: character_info.json
font_generations/row_0003_𠀧/: character_info.json
font_generations/row_0004_𠀨/: character_info.json
font_generations/row_0005_𠀪/: character_info.json
font_generations/row_0006_𠀫/: character_info.json
font_generations/row_0007_𠀲/: character_info.json
font_generations/row_0008_𠀳/: character_info.json
font_generations/row_0009_𠀴/: character_info.json
font_generations/row_0010_𠀺/: character_info.json
font_generations/row_0011_𠀿/: character_info.json
font_generations/row_0012_𠁀/: character_info.json
font_generations_original/: batch_config.yaml
src/: build_optimized.py  model.py
(+260 files in other folders)
